--- a/Makefile.common
+++ b/Makefile.common
@@ -6,7 +6,7 @@ rwildcard = $(foreach d, $(wildcard $1*), \
             $(call rwildcard, $d/, $2))
 
 FLAVOR  ?=  EixMode9
-SPLASH   =  resources/EixMode9_splash.pcx
+SPLASH   =  resources/EixMode9_splash.png
 
 ifeq ($(FLAVOR),SafeMode9)
     CFLAGS += -DSAFEMODE
